--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,3 +1,5 @@
 { 
-	"baseURL": "https://www.astrofarm.eu"
+	"baseURL": "https://www.astrofarm.eu",
+    "domesensoraddress": "0x76",
+    "exteriorsensoraddress": "0x77"
 }
