--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,5 +1,27 @@
 { 
 	"baseURL": "https://www.astrofarm.eu",
     "domesensoraddress": "0x76",
-    "exteriorsensoraddress": "0x77"
+    "exteriorsensoraddress": "0x77",
+	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
+	"cameraoutputpath": "/home/pi/share/camera",
+	"currentLocation" : "roque",
+	"locations": 
+	[{ 
+		"name" : "roque",
+		"latitude" : 28.6468866, 
+		"longitude" : -17.7742491,
+		"elevation" : 2326 
+	}, 
+	{ 
+		"name" : "sanjose",
+		"latitude" : 28.6468866, 
+		"longitude" : -17.7742491,
+		"elevation" : 281 
+	},
+	{ 
+		"name" : "madrid",
+		"latitude" : 40.3719808, 
+		"longitude" : -3.5262707,
+		"elevation" : 900 
+	}]
 }
