--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,10 +1,11 @@
 { 
-	"baseURL": "https://www.astrofarm.eu",
+	"baseURL": "http://astrofarm.local",
     "domesensoraddress": "0x76",
     "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
+	"camerauploadURL" : "http://astrofarm.local:3001/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
-	"currentLocation" : "roque",
+	"currentLocation" : "madrid",
 	"locations": 
 	[{ 
 		"name" : "roque",
