better sun and moon

--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -3,7 +3,7 @@
     "domesensoraddress": "0x76",
     "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
-	"camerauploadURL" : "http://astrofarm.local:3001/imageUpload",
+	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
 	"currentLocation" : "madrid",
 	"locations": 
