--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,7 +1,7 @@
 { 
-	"baseURL": "http://astrofarm.local",
-    "domesensoraddress": "0x76",
-    "exteriorsensoraddress": "0x77",
+	"baseURL": "https://www.astrofarm.eu",
+	"domesensoraddress": "0x76",
+        "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
