--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,5 +1,6 @@
 { 
-	"baseURL": "https://www.astrofarm.eu",
+	"baseURL": "http://rashley.eu",
+	"localURL": "http://rashley.local",
 	"domesensoraddress": "0x76",
         "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
@@ -17,12 +18,17 @@
 		"name" : "sanjose",
 		"latitude" : 28.6468866, 
 		"longitude" : -17.7742491,
-		"elevation" : 281 
+		"elevation" : 281   
 	},
 	{ 
 		"name" : "madrid",
 		"latitude" : 40.3719808, 
 		"longitude" : -3.5262707,
 		"elevation" : 900 
-	}]
+	}],
+	"caseFanGPIO": 14,
+	"domeFanGPIO": 15,
+	"domeTempSensor": "AM2302",
+	"domeTempGPIO": 17,
+	"externalTempSensor": "DS18B20"
 }
