--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -6,7 +6,7 @@
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
-	"currentLocation" : "madrid",
+	"currentLocation" : "sanjose",
 	"locations": 
 	[{ 
 		"name" : "roque",
@@ -26,9 +26,8 @@
 		"longitude" : -3.5262707,
 		"elevation" : 900 
 	}],
-	"caseFanGPIO": 14,
-	"domeFanGPIO": 15,
+	"caseFan" : { "GPIO" : 14, "temperatureUpper" : 35, "temperatureLower": 30, "name" : "case"},
+	"domeFan" : { "GPIO" : 15, "temperatureUpper" : 35, "temperatureLower": 30, "name" : "dome"},
 	"domeTempSensor": "AM2302",
-	"domeTempGPIO": 17,
 	"externalTempSensor": "DS18B20"
 }
