--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,12 +1,13 @@
 { 
 	"baseURL": "http://rashley.eu",
 	"localURL": "http://rashley.local",
+	"timezone": "utc",
 	"domesensoraddress": "0x76",
         "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
-	"currentLocation" : "sanjose",
+	"currentLocation" : "roque",
 	"locations": 
 	[{ 
 		"name" : "roque",
