--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,4 +1,6 @@
 { 
+	"ledFile": "/var/log/status.led",
+	"ledPIN": 17,
 	"baseURL": "http://rashley.eu",
 	"localURL": "http://rashley.local",
 	"timezone": "utc",
