changes for multiple cameras

--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -9,6 +9,20 @@
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
 	"cameraoutputpath": "/home/pi/share/camera",
+	"camera" : {
+		"day" : {
+			"cadence" : 900,
+			"params" : "--awb greyworld",
+			"annotation" : ""
+			},
+		"night" : {
+			"cadence" : 240,
+			"params" : "-md 3 -dg 2 -ag 8 -st --drc off -ex off",
+			"expTime": 10,
+			"annotation" : ""
+			}
+		},
+		
 	"currentLocation" : "roque",
 	"locations": 
 	[{ 
@@ -29,8 +43,18 @@
 		"longitude" : -3.5262707,
 		"elevation" : 900 
 	}],
-	"caseFan" : { "GPIO" : 14, "temperatureUpper" : 35, "temperatureLower": 30, "name" : "case"},
-	"domeFan" : { "GPIO" : 15, "temperatureUpper" : 35, "temperatureLower": 30, "name" : "dome"},
-	"domeTempSensor": "AM2302",
-	"externalTempSensor": "DS18B20"
+	"caseFan" : "none",
+	"domeFan" : "none",
+	"domeTempSensor": { 
+		"type": "BME280",
+		"address" : "0x77"
+		},
+	"externalTempSensor": {
+		"type": "IR",
+		"address" : "5a"
+		}, 
+	"skySensor": {
+		"type" :"IR",
+		"address" : "5a"
+		}
 }
