--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,13 +1,18 @@
 { 
 	"ledFile": "/var/log/status.led",
 	"ledPIN": 17,
+	"ledRefresh": 5,
 	"baseURL": "http://rashley.eu",
 	"localURL": "http://rashley.local",
+	"meteoUpload": {
+		"cadence" : 180,
+		"URL" : "https://skywatching.eu/meteo"
+	},
 	"timezone": "utc",
 	"domesensoraddress": "0x76",
-        "exteriorsensoraddress": "0x77",
+    "exteriorsensoraddress": "0x77",
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
-	"camerauploadURL" : "https://www.astrofarm.eu/imageUpload",
+	"camerauploadURL" : "https://skywatching.eu/upload",
 	"cameraoutputpath": "/home/pi/share/camera",
 	"camera" : {
 		"day" : {
@@ -17,8 +22,8 @@
 			},
 		"night" : {
 			"cadence" : 240,
-			"params" : "-md 3 -dg 2 -ag 8 -st --drc off -ex off",
-			"expTime": 10,
+			"params" : "-md 3 -dg 3 -ag 8 -st --drc off -ex off --awb greyworld",
+			"expTime": 15,
 			"annotation" : ""
 			}
 		},
@@ -47,14 +52,17 @@
 	"domeFan" : "none",
 	"domeTempSensor": { 
 		"type": "BME280",
-		"address" : "0x77"
+		"address" : "0x77",
+		"cadence" : 60
 		},
-	"externalTempSensor": {
-		"type": "IR",
-		"address" : "5a"
-		}, 
+	"cpuSensor": { 
+		"type": "CPU",
+		"address" : "/sys/class/thermal/thermal_zone0/temp",
+		"cadence" : 40
+		},
 	"skySensor": {
 		"type" :"IR",
-		"address" : "5a"
+		"address" : "5a",
+		"cadence" : 60
 		}
 }
