--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -1,4 +1,6 @@
 { 
+	"GSMserial": "/dev/ttyUSB0",
+	"GPSlog" : "/var/log/gps.log",
 	"ledFile": "/var/log/status.led",
 	"ledPIN": 17,
 	"ledRefresh": 5,
