--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -16,6 +16,7 @@
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://skywatching.eu/upload",
 	"cameraoutputpath": "/home/pi/share/camera",
+    "installpath" : "/home/pi/code/meteopi",
 	"camera" : {
 		"day" : {
 			"cadence" : 900,
@@ -30,7 +31,7 @@
 			}
 		},
 		
-	"currentLocation" : "roque",
+	"currentLocation" : "madrid",
 	"locations": 
 	[{ 
 		"name" : "roque",
