--- a/meteopi.cfg
+++ b/meteopi.cfg
@@ -16,6 +16,7 @@
 	"cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
 	"camerauploadURL" : "https://skywatching.eu/upload",
 	"cameraoutputpath": "/home/pi/share/camera",
+	"imagedataURL" : "https://skywatching.eu/imagedata",
     "installpath" : "/home/pi/code/meteopi",
 	"camera" : {
 		"day" : {
