Annotations now occur in postProcessor

--- a/murdoc.cfg
+++ b/murdoc.cfg
@@ -32,9 +32,9 @@
             "height": 3040
         },
         "night": {
-            "cadence": 300,
-            "params": "-t 10 -bm -ex off -ag 1 -st --awb greyworld",
-            "expTime": 0.6328125000000001,
+            "cadence": 220,
+            "params": "-md 3 -dg 4 -ag 6 -st --drc off -ex off --awb greyworld",
+            "expTime": 56.56,
             "annotation": "",
             "width": 4056,
             "height": 3040
