--- a/murdoc.cfg
+++ b/murdoc.cfg
@@ -34,7 +34,7 @@
         "night": {
             "cadence": 220,
             "params": "-md 3 -dg 4 -ag 6 -st --drc off -ex off --awb greyworld",
-            "expTime": 56.56,
+            "expTime": 16.247145439387964,
             "annotation": "",
             "width": 4056,
             "height": 3040
