--- a/murdoc.cfg
+++ b/murdoc.cfg
@@ -34,7 +34,7 @@
         "night": {
             "cadence": 220,
             "params": "-md 3 -dg 4 -ag 6 -st --drc off -ex off --awb greyworld",
-            "expTime": 16.247145439387964,
+            "expTime": 5.59205514710801,
             "annotation": "",
             "width": 4056,
             "height": 3040
@@ -86,5 +86,9 @@
         "logFile": "/var/log/netstatus.log",
         "cadence": 60,
         "pingServer": "ftp.nl.debian.org"
+    },
+    "archive": {
+        "location": "/mnt/data/skywatch",
+        "local": "/home/pi/share/camera"
     }
 }
