new skywatch install at murdoc

--- a/murdoc.cfg
+++ b/murdoc.cfg
@@ -21,8 +21,8 @@
     "cameraparameterURL": "https://www.astrofarm.eu/camconfig.json",
     "camerauploadURL": "https://skywatching.eu/upload",
     "imagedataURL": "https://skywatching.eu/imagedata",
-    "cameraoutputpath": "/home/pi/share/camera",
-    "installpath": "/home/pi/code/meteopi",
+    "cameraoutputpath": "/home/skywatch/share/camera",
+    "installpath": "/home/skywatch/code/meteopi",
     "camera": {
         "day": {
             "cadence": 900,
@@ -89,6 +89,6 @@
     },
     "archive": {
         "location": "/mnt/data/skywatch",
-        "local": "/home/pi/share/camera"
+        "local": "/home/skywatch/share/camera"
     }
 }
