added rsync bash script for jma@ing

--- a/murdoc.cfg
+++ b/murdoc.cfg
@@ -34,7 +34,7 @@
         "night": {
             "cadence": 220,
             "params": "-md 3 -dg 4 -ag 6 -st --drc off -ex off --awb greyworld",
-            "expTime": 2.84765625,
+            "expTime": 4.74609375,
             "annotation": "",
             "width": 4056,
             "height": 3040
@@ -88,7 +88,7 @@
         "pingServer": "ftp.nl.debian.org"
     },
     "archive": {
-        "remote": "rashley@pluto.ing.iac.es:/data/allsky/skywatch/{date}",
+        "remote": "astrosw@astroubu20v.ing.iac.es:/data/allsky/skywatch/{date}",
         "local": "/home/skywatch/share/no-text"
     }
 }
